Remove Reading and Project Information from EE488 menu

--- a/static/teaching/ee488/calendar.html
+++ b/static/teaching/ee488/calendar.html
@@ -24,8 +24,7 @@
 <li><a href="index.html">EE488 Home</a></li>
 <li><a href="syllabus.html">Syllabus</a></li>
 <li><a href="calendar.html">Calendar</a></li>
-<li><a href="project.html">Assignments / Project</a></li>
-<li><a href="reading.html">Reading</a></li>
+<li><a href="project.html">Assignments</a></li>
 </ul>
 
 <h2>Homework Milestones</h2>
