Remove Reading and Project Information from EE488 menu

--- a/static/teaching/ee488/project.html
+++ b/static/teaching/ee488/project.html
@@ -1,265 +1,28 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>EE515/IS523 Information on Project</title>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html>
+<head>
+  <title>EE488 Introduction to Cybersecurity -- Syllabus</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link href="asm.css" rel="stylesheet" type="text/css">
+</head>
 
-  
-
-  
-  
-  <meta name="description" content="Calendar for EE515/IS523">
-
-  
-  <meta name="keywords" content="EE515, IS523, Think Like an Adversary, Project">
-
-  
-  <link href="asm.css" rel="stylesheet" type="text/css"></head><body style="direction: ltr; color: rgb(0, 0, 0);" bottommargin="1" rightmargin="0" leftmargin="0" topmargin="5" alink="#ee0000" lang="en-US" link="#0000ee" vlink="#551a8b">
+<body style="direction: ltr; color: rgb(0,0,0);" topmargin="5">
 <br>
 
-<table style="text-align: left; margin-left: auto; margin-right: auto;" ,="" border="0" cellpadding="10" width="820">
+<tr>
+<td valign="top">
 
-  <tbody>
-    <tr>
-      <td colspan="1" rowspan="1" valign="top">
-      <h1>EE 515/IS 523: Security 101: Think Like an Adversary</h1>
-      <br>
-      <div id="topnavbar">
-      <ul class="topnavlist">
-        <li><a href="index.html">EE515/IS523 Home</a></li>
-        <li><a href="syllabus.html">Syllabus</a></li>
-        <li><a href="calendar.html">Calendar</a></li>
-        <li><a href="project.html">Project Information<br>
-          </a></li>
-        <li><a href="reading.html">Reading Report</a></li>
-          
-      </ul>
-      </div>
-      <p> </p>
-      <h2>Project Information<br>
-      </h2>
-      <ul>
-        <li> <strong> Introduction </strong> <br>
-This course requires a group or individual project.&nbsp; Each project
-should have some "attacking or analysis research" aspect in that your
-aim should be to learn
-something we couldn't learn just from reading a few papers.&nbsp; As an
-example, you can implement an attack on a small scale system. Another
-example
-project would be to measure some security-relevant large scale
-phenomenon that hasn't been measured before.&nbsp; We'll list some more
-ideas below.</li>
-        <li> <strong>Important dates:</strong>
-          <ul>
-            <li>Pre-proposal: Sep 22, 9:00 AM. </li>
-            <li>Full Proposal: Oct 1, 9:00 AM. </li>
-            <li>Midterm report: Nov 3, 9:00 AM </li>
-            <li>Final report: <strong>Dec 13, 9:00 AM.</strong> (NO
-EXTENSION!!). </li>
-          </ul>
-        </li>
-        <li> <strong> Group Size.</strong> <br>
-Groups should have 1 to 5 members. You have to find your own group
-members.<br>
-          <br>
-        </li>
-        <li> <strong>Grading and detailed schedule </strong><br>
-          <strong></strong>
-          <ul>
-            <li><strong> Pre-proposal. (0% but required) </strong> <br>
-One member of each group should submit a one-page preproposal (named
-"preproposal.pdf", and in PDF
-format) with the following information:</li>
-            <ul>
-              <li><span style="font-style: italic;">Who</span>: All
-members
-of the proposed group, and a group or project name.<br>
-              </li>
-              <li><span style="font-style: italic;">What:</span> A
-clear
-description of the problem you want to solve.&nbsp; There is no
-requirement that this is the final problem, and it can be a somewhat
-general area, for the preproposal. </li>
-              <li><span style="font-style: italic;">Why</span>: Why
-should we
-be interested in the result of your project?&nbsp; What will it tell us
-that we didn't know before, or enable us to do that we can't do
-now?&nbsp; Why would it be useful to know or be able to do this? </li>
-              <li><span style="font-style: italic;">How:</span> For the
-full
-proposal, you will need to give a detailed approach that you will
-use.&nbsp; For the pre-proposal, you can list some papers and tools
-that are relevant, and how and why you think they can help. </li>
-              <li><span style="font-style: italic;">Work distribution:</span>
-How many <strong>hours</strong> each individual member spent to do <strong>what</strong>
-to prepare this proposal. (1 line for each member) </li>
-              <li>Within 3 days, I will give each pre-proposal
-some
-feedback, possibly including a suggestion that you do something else.</li>
-            </ul>
-          </ul>
-          <ul>
-            <li><strong>Full Proposal (7%).</strong>&nbsp; One member
-of each
-group should submit a (maximum) three-page (in
-10pt font, and two-column mode) full proposal (named "proposal.pdf" in
-PDF format) that incorporates the feedback to give the following
-information:
-              <ul>
-                <li style="text-align: left;"><span style="font-style: italic;">Who</span>:
-(same as last time; perhaps if there was a merger a new project name)</li>
-                <li style="text-align: left;"><span style="font-style: italic;">What</span>:
-A clear description of the exact problem you wish to solve.&nbsp; It is
-important that based on the feedback you received, you pick the proper
-scope of your project.&nbsp; Part of your final grade will be whether
-you accomplish your goal; another part will be whether you accomplished
-enough!</li>
-                <li style="text-align: left;"><span style="font-style: italic;">Why:</span>
-A fairly detailed "motivation" and "related work" section - perhaps one
-full column.&nbsp; Expand on the <span style="font-style: italic;">why</span>
-from your preproposal, and be sure to answer any questions raised in
-your feedback.</li>
-                <li style="text-align: left;"><span style="font-style: italic;">How:</span>
-A detailed account of your approach.&nbsp; What data will you
-gather?&nbsp; How will you evaluate your results?&nbsp; Cite relevant
-papers.&nbsp; What resources will you use?<br>
-                </li>
-                <li style="text-align: left;"><span style="font-style: italic;">Management
-plan: </span>Who will do what?&nbsp; (This is especially important for
-a larger group)&nbsp; You should try to give a realistic
-timetable.&nbsp; This section should also propose your project
-milestone:&nbsp; if everything goes according to schedule, what will be
-accomplished by Oct 24?&nbsp; For example, if your project is to
-make some measurements, you should probably have the tools and access
-you need by that time.&nbsp; If your project is to analyze some data,
-you should have the data and be able to parse it;&nbsp; if your project
-is to build a tool you should have a fair amount of implementation
-finished and tested.<br>
-                </li>
-                <li><span style="font-style: italic;">Work distribution:</span>
-How many <strong>hours</strong> each individual member spent to do <strong>what</strong>
-to prepare this proposal. (1 line for each member)</li>
-              </ul>
-            </li>
-            <li><strong>Midterm Report(7%).</strong>
-Exactly one member of each group should submit
-tar-gzipped directory including any deliverables (such as
-implementation source code) mentioned in the proposal, and a at least 6
-page report ("report.pdf", in
-10pt font, and two-column mode). Please make sure to start organizing
-your
-report following the final report guideline, while you can leave some
-of the sections empty. Also, please use format following <a href="http://www.ieee.org/web/publications/authors/transjnl/index.html">IEEE
-guideline</a>. Also do not forget to include the followings:<br>
-              <ul>
-                <li>If you are way ahead, what extra work will you
-do?&nbsp; </li>
-                <li> If you are behind, what difficulties did you
-encounter?&nbsp; </li>
-                <li> Do you have a plan for what work to drop, if
-necessary?&nbsp; </li>
-                <li> The report should give a brief summary of what
-work was
-completed by each member and how many hours the member spent. <br>
-                </li>
-              </ul>
-              <br>
-            </li>
-            <li><strong>Presentation(7%).</strong> Each group will give
-an
-in-class presentation of their work during the last week of class or
-some other days.&nbsp; This could be a demo, or a formal
-presentation.&nbsp; The entire group has responsibility to ensure the
-best possible presentation.&nbsp; <a href="presentation_evaluation.txt">Presentation
-evaluation criteria</a> <br>
-              <p> </p>
-            </li>
-            <li style="text-align: left;"><span style="font-weight: bold;">Final
-Report (28%).</span>&nbsp; One member of each group should submit a tar
-gzipped directory which includes any "deliverables" and
-a (minimum 10 pages, maximum 12 page, in
-10pt font, and two-column mode) report ("report.pdf") on the
-project.&nbsp; This report should be in the style of a scientific paper
-(e.g. a conference paper) and should present the project's motivation,
-approach, results, contribution, related work, and conclusions.&nbsp; A
-separate file ("contrib.pdf") should summarize the hours spent, and
-contributions of each group member.</li>
-          </ul>
-          <br>
-        </li>
-        <li> <strong>Examples</strong>
-          <ul>
-            <li> Two example proposals are available <a href="proposal1.pdf">here</a> and <a href="proposal2.pdf">here</a>. </li>
-            <li> <a href="http://www.ieee.org/portal/index.jsp?pageID=corp_level1&amp;path=pubs/transactions&amp;file=stylesheets.xml&amp;xsl=generic.xsl"><b>LaTeX
-and MS word style files</b></a>. </li>
-            <li> Example papers from previous semesters: <br>
-              <a href="survey.pdf">Survey paper</a>, <a href="scott_tony.pdf">Research
-paper</a>. Both of them talked about implementation. </li>
-          </ul>
-        </li>
-        <li> <strong>Project Ideas</strong> <br>
-You may choose any project that interests you as long as it satisfies
-the basic requirements listed above and is related to cryptography in
-some
-way.&nbsp; To get an idea for what current research is like in
-security, you should look through the last several proceedings from <a href="http://www.ieee-security.org/TC/SP-Index.html">Oakland</a>, <a href="http://www.acm.org/sigs/sigsac/ccs/">CCS</a>, <a href="http://www.iacr.org">Crypto/Eurocrypt/Asiacrypt</a>, and <a href="http://www.isoc.org/isoc/conferences/ndss/">NDSS</a>. However,
-if you are having trouble coming up with ideas, here are a few examples:<br>
-&nbsp;&nbsp;&nbsp; <br>
-          <ul>
-            <li>Implement or extend an attack on a security mechanism
-described
-in a recent paper.&nbsp; Succesfully deploy the attack <span style="font-style: italic;">against your own machine only</span>.&nbsp;
-Measure the performance of your attack. <br>
-            </li>
-            <li>Investigate the security of some ad-hoc protocol.&nbsp;
-For
-example, many peer to peer protocols are not designed with security
-features in mind.&nbsp; What should be the security goals?&nbsp; Do the
-protocols meet them or are there attacks?&nbsp; (e.g., BitTorrent
-claims to be "secure" in that it prevents freeloaders.&nbsp; Is there a
-way to circumvent this mechanism?&nbsp; Can a torrent be attacked in
-other ways, e.g. can we successfully co-opt a torrent, or perform
-denial of service on a torrent at the protocol level? There are a lot
-of open-source project and standard that lack security analysis.)</li>
-          </ul>
-          <strong></strong>
-          <p><strong>Note</strong> <br>
-          </p>
-          <ul>
-            <li> To get the full credit, the project should contain new
-ideas
-(new attack, new analysis, new implementation, new measurement), which
-could be publishable in academic conferences (not necessarily top
-notch). </li>
-            <li> For example, simple implementation (e.g. re-do
-previously
-implemented system without new analysis, or no comparison) will not get
-the full credit. </li>
-            <li> For example, simple summary of papers will not get
-full
-credit. A survey paper should be written so that it conveys information
-to the reader. When grading the paper we will ask ourselves whether
-other students in the class might learn about the topic you choose by
-reading your paper. The paper should contain original analysis of the
-the papers you choose to cover, and ideally suggest directions for
-future research on the topic. </li>
-          </ul>
-        </li>
-        <li>Misc: (Partially borrowed form HPCC Seminars webpage:
-http://www-users.cs.umn.edu/~zhai/hpcc-seminars/) <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.cs.berkeley.edu/%7Epattrsn/talks/BadCareer.ppt">How
-to Give a Bad Talk by David Patterson </a> <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.cs.wisc.edu/%7Emarkhill/conference-talk.html">Mark
-Hill's Oral Presentation Advices. </a> <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.cs.dartmouth.edu/%7Escot/givingTalks/">
-Robert
-Drysdale's slides on Giving Technical Talks.</a> <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.biochem.arizona.edu/classes/bioc568/papers.htm">How
-to read a paper? Not from our field, and the rules still apply.</a> <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://www.usenix.org/events/samples/submit/advice.html">Some
-comments on how not to write a good paper.</a> </li>
-      </ul>
-      <br>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<h1>EE488: Introduction to Cybersecurity</h1>
 
-</body></html>
+<div id="topnavbar">
+<ul class="topnavlist">
+<li><a href="index.html">EE488 Home</a></li>
+<li><a href="syllabus.html">Syllabus</a></li>
+<li><a href="calendar.html">Calendar</a></li>
+<li><a href="project.html">Assignments</a></li>
+</ul>
+</div>
+
+
+</body>
+</html>
