Update EE488 syllabus: add grading, textbooks, and LLM policy

--- a/static/teaching/ee488/syllabus.html
+++ b/static/teaching/ee488/syllabus.html
@@ -54,6 +54,22 @@ including cellular security, GPS spoofing, and blockchain systems.
 <li>EE Security IV: Blockchain and cryptocurrency</li>
 </ul>
 
+<h2>Textbooks (Optional)</h2>
+<p>
+All required readings are available online for free. You do not need to purchase any textbooks.
+</p>
+<ul>
+<li><b>Security Engineering</b> by Ross Anderson (2nd edition)<br>
+Available at <a href="https://www.cl.cam.ac.uk/~rja14/book.html">https://www.cl.cam.ac.uk/~rja14/book.html</a>
+</li>
+<li><b>Handbook of Applied Cryptography</b> by Alfred J. Menezes, Paul C. Van Oorschot, Scott A. Vanstone<br>
+Available at <a href="http://www.cacr.math.uwaterloo.ca/hac/">http://www.cacr.math.uwaterloo.ca/hac/</a>
+</li>
+</ul>
+<p>
+Additional reading materials will be provided during the semester.
+</p>
+
 <h2>Homework (3 assignments)</h2>
 <table border="1" cellpadding="6" cellspacing="0" style="border-collapse: collapse;">
   <tr>
@@ -84,10 +100,55 @@ including cellular security, GPS spoofing, and blockchain systems.
 
 <h2>Exams</h2>
 <ul>
-<li><b>Midterm Exam #1:</b> April 1, 2026 (lecture cancelled on this date only)</li>
-<li><b>Midterm Period:</b> Week 8 (April 20--24, 2026). No lectures during this week.</li>
-<li><b>Midterm Exam #2:</b> May 4, 2026 (lecture cancelled on this date only)</li>
+<li><b>Midterm Exam #1:</b> April 1, 2026 </li>
+<li><b>Midterm Exam #2:</b> May 4, 2026 </li>
 <li><b>Final Exam Period:</b> Week 16 (June 15--19, 2026). No lectures during this week. Final exam date/time TBA.</li>
+</ul>
+
+<h2>Grading</h2>
+<table border="1" cellpadding="6" cellspacing="0" style="border-collapse: collapse;">
+  <tr>
+    <th align="left">Component</th>
+    <th align="right">Percentage</th>
+  </tr>
+  <tr>
+    <td>Participation</td>
+    <td align="right">10%</td>
+  </tr>
+  <tr>
+    <td>Homework (3 assignments)</td>
+    <td align="right">9%</td>
+  </tr>
+  <tr>
+    <td>Midterm Exam #1</td>
+    <td align="right">23%</td>
+  </tr>
+  <tr>
+    <td>Midterm Exam #2</td>
+    <td align="right">23%</td>
+  </tr>
+  <tr>
+    <td>Final Exam</td>
+    <td align="right">35%</td>
+  </tr>
+  <tr style="font-weight: bold;">
+    <td>Total</td>
+    <td align="right">100%</td>
+  </tr>
+</table>
+
+<p><b>Extra Credit:</b> All homework, exams, and attendance have 20% extra credit available.</p>
+
+<h3>Participation (10 points total)</h3>
+<ul>
+<li><b>Attendance (5 points):</b> -1 point per absence, -0.5 point per late arrival</li>
+<li><b>Pre-class Questions (5 points max):</b> Submit questions before each lecture (1 point per question). Best Questions earn +1 bonus point.</li>
+</ul>
+
+<h2>Academic Integrity and LLM Policy</h2>
+<ul>
+<li><b>Homework:</b> You may freely use Large Language Models (ChatGPT, Claude, etc.) as learning tools. Collaboration with classmates is encouraged.</li>
+<li><b>Exams:</b> All exams are closed-book. No external resources, LLMs, notes, or collaboration permitted.</li>
 </ul>
 
 <h2>Notes</h2>
@@ -96,11 +157,6 @@ including cellular security, GPS spoofing, and blockchain systems.
 <li>No lectures are held during the official midterm period (Week 8) and final exam period (Week 16).</li>
 <li>See the <a href="calendar.html">Calendar</a> page for detailed weekly topics.</li>
 </ul>
-
-<hr>
-<p style="font-size: 90%; color: #666;">
-This syllabus reflects the finalized course structure including EE Security I--IV and the homework schedule (HW1--HW3).
-</p>
 
 </td>
 </tr>
